myanalyzer.output
Grammar

    0 $accept: program $end

    1 program: main_body

    2 main_body: decl_body main
    3          | main

    4 main: KW_DEF KW_MAIN DEL_LPAR DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON

    5 types: DEL_LBLOCK DEL_RBLOCK basic_types
    6      | basic_types
    7      | TK_IDENTIFIER

    8 basic_types: KW_INT
    9            | KW_BOOLEAN
   10            | KW_SCALAR
   11            | KW_STR

   12 identifiers: TK_IDENTIFIER
   13            | identifiers DEL_COMMA TK_IDENTIFIER

   14 decl_body: decl_body declarations
   15          | declarations

   16 declarations: variable_declarations
   17             | complex_type_declarations
   18             | constant_declarations
   19             | functions

   20 variable_declarations: identifiers DEL_COLON basic_types DEL_SMCOLON
   21                      | TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK DEL_COLON basic_types DEL_SMCOLON

   22 comp_variables: identifiers DEL_COLON TK_IDENTIFIER DEL_SMCOLON

   23 constant_declarations: KW_CONST identifiers AP_ASSIGN expressions DEL_COLON types DEL_SMCOLON

   24 functions: KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   25          | KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR AP_ARROWASSIGN types DEL_COLON body KW_ENDDEF DEL_SMCOLON

   26 parameter_declarations: ε
   27                       | TK_IDENTIFIER DEL_COLON types
   28                       | TK_IDENTIFIER DEL_LBLOCK DEL_RBLOCK DEL_COLON types
   29                       | TK_IDENTIFIER DEL_LBLOCK DEL_RBLOCK DEL_COLON types DEL_COMMA parameter_declarations
   30                       | TK_IDENTIFIER DEL_COLON types DEL_COMMA parameter_declarations

   31 complex_type_declarations: KW_COMP TK_IDENTIFIER DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON

   32 comp_body: comp_variable_declarations
   33          | comp_variable_declarations comp_body
   34          | comp_functions
   35          | comp_functions comp_body

   36 comp_variable_declarations: comp_identifiers DEL_COLON types DEL_SMCOLON

   37 comp_identifiers: AP_HASHASSIGN TK_IDENTIFIER
   38                 | AP_HASHASSIGN TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK
   39                 | AP_HASHASSIGN TK_IDENTIFIER DEL_COMMA comp_identifiers

   40 comp_functions: KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   41               | KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR AP_ARROWASSIGN types DEL_COLON body KW_ENDDEF DEL_SMCOLON

   42 expressions: identifier_expressions
   43            | TK_STRING
   44            | KW_TRUE
   45            | KW_FALSE
   46            | function_statement
   47            | arithmetic_expressions
   48            | relational_expressions
   49            | KW_NOT expressions
   50            | expressions KW_AND expressions
   51            | expressions KW_OR expressions
   52            | DEL_LPAR expressions DEL_RPAR

   53 comp_expressions: expressions DEL_DOT expressions

   54 identifier_expressions: TK_IDENTIFIER
   55                       | AP_HASHASSIGN TK_IDENTIFIER
   56                       | AP_HASHASSIGN TK_IDENTIFIER DEL_LBLOCK identifier_expressions DEL_RBLOCK
   57                       | TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK
   58                       | TK_IDENTIFIER DEL_LBLOCK TK_IDENTIFIER DEL_RBLOCK
   59                       | comp_expressions

   60 arithmetic_expressions: TK_INTEGER
   61                       | TK_FLOAT
   62                       | expressions OP_POWER expressions
   63                       | expressions OP_MULT expressions
   64                       | expressions OP_DIV expressions
   65                       | expressions OP_MOD expressions
   66                       | expressions OP_PLUS expressions
   67                       | expressions OP_MINUS expressions
   68                       | OP_PLUS expressions
   69                       | OP_MINUS expressions

   70 relational_expressions: expressions RP_LESS expressions
   71                       | expressions RP_LESSEQUALS expressions
   72                       | expressions RP_MORE expressions
   73                       | expressions RP_MOREEQUALS expressions
   74                       | expressions RP_EQUALS expressions
   75                       | expressions RP_NOTEQUALS expressions

   76 assign_expressions: identifier_expressions AP_ASSIGN expressions
   77                   | identifier_expressions AP_PLUSASSIGN expressions
   78                   | identifier_expressions AP_MINASSIGN expressions
   79                   | identifier_expressions AP_MULASSIGN expressions
   80                   | identifier_expressions AP_DIVASSIGN expressions
   81                   | identifier_expressions AP_MODASSIGN expressions

   82 statements: if_statement DEL_SMCOLON
   83           | for_statement DEL_SMCOLON
   84           | array_statement DEL_SMCOLON
   85           | while_statement DEL_SMCOLON
   86           | KW_BREAK DEL_SMCOLON
   87           | KW_CONTINUE DEL_SMCOLON
   88           | assign_expressions DEL_SMCOLON
   89           | return_statement DEL_SMCOLON
   90           | function_statement DEL_SMCOLON
   91           | comp_expressions DEL_SMCOLON

   92 command_statements: statements
   93                   | command_statements statements
   94                   | command_statements variable_declarations
   95                   | variable_declarations
   96                   | command_statements constant_declarations
   97                   | constant_declarations

   98 if_statement: KW_IF DEL_LPAR expressions DEL_RPAR DEL_COLON command_statements KW_ENDIF
   99             | KW_IF DEL_LPAR expressions DEL_RPAR DEL_COLON command_statements KW_ELSE DEL_COLON command_statements KW_ENDIF

  100 for_statement: KW_FOR identifiers KW_IN DEL_LBLOCK expressions DEL_COLON expressions DEL_RBLOCK DEL_COLON command_statements KW_ENDFOR
  101              | KW_FOR identifiers KW_IN DEL_LBLOCK expressions DEL_COLON expressions DEL_COLON expressions DEL_RBLOCK DEL_COLON command_statements KW_ENDFOR

  102 array_statement: integral_array
  103                | other_array

  104 integral_array: TK_IDENTIFIER AP_COLONASSIGN DEL_LBLOCK expressions KW_FOR TK_IDENTIFIER DEL_COLON TK_INTEGER DEL_RBLOCK DEL_COLON types

  105 other_array: TK_IDENTIFIER AP_COLONASSIGN DEL_LBLOCK expressions KW_FOR TK_IDENTIFIER DEL_COLON types KW_IN TK_IDENTIFIER KW_OF TK_INTEGER DEL_RBLOCK DEL_COLON types

  106 while_statement: KW_WHILE DEL_LPAR expressions DEL_RPAR DEL_COLON command_statements KW_ENDWHILE

  107 return_statement: KW_RETURN
  108                 | KW_RETURN expressions

  109 function_statement: TK_IDENTIFIER DEL_LPAR function_arg DEL_RPAR

  110 function_arg: ε
  111             | expressions
  112             | function_arg DEL_COMMA expressions

  113 body: statements
  114     | variable_declarations
  115     | constant_declarations
  116     | comp_variables
  117     | body statements
  118     | body variable_declarations
  119     | body constant_declarations
  120     | body comp_variables


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_IDENTIFIER <crepr> (258) 7 12 13 21 22 24 25 27 28 29 30 31 37 38 39 40 41 54 55 56 57 58 104 105 109
    TK_INTEGER <crepr> (259) 21 38 57 60 104 105
    TK_FLOAT <crepr> (260) 61
    TK_STRING <crepr> (261) 43
    KW_INT (262) 8
    KW_SCALAR (263) 10
    KW_STR (264) 11
    KW_BOOLEAN (265) 9
    KW_TRUE (266) 44
    KW_FALSE (267) 45
    KW_CONST (268) 23
    KW_IF (269) 98 99
    KW_ELSE (270) 99
    KW_ENDIF (271) 98 99
    KW_FOR (272) 100 101 104 105
    KW_IN (273) 100 101 105
    KW_ENDFOR (274) 100 101
    KW_WHILE (275) 106
    KW_ENDWHILE (276) 106
    KW_BREAK (277) 86
    KW_CONTINUE (278) 87
    KW_NOT (279) 49
    KW_AND (280) 50
    KW_OR (281) 51
    KW_DEF (282) 4 24 25 40 41
    KW_ENDDEF (283) 4 24 25 40 41
    KW_MAIN (284) 4
    KW_RETURN (285) 107 108
    KW_COMP (286) 31
    KW_ENDCOMP (287) 31
    KW_OF (288) 105
    OP_PLUS (289) 66 68
    OP_MINUS (290) 67 69
    OP_MULT (291) 63
    OP_DIV (292) 64
    OP_MOD (293) 65
    OP_POWER (294) 62
    RP_EQUALS (295) 74
    RP_NOTEQUALS (296) 75
    RP_LESS (297) 70
    RP_LESSEQUALS (298) 71
    RP_MORE (299) 72
    RP_MOREEQUALS (300) 73
    AP_ASSIGN (301) 23 76
    AP_HASHASSIGN (302) 37 38 39 55 56
    AP_PLUSASSIGN (303) 77
    AP_MINASSIGN (304) 78
    AP_MULASSIGN (305) 79
    AP_DIVASSIGN (306) 80
    AP_MODASSIGN (307) 81
    AP_COLONASSIGN (308) 104 105
    AP_ARROWASSIGN (309) 25 41
    DEL_SMCOLON (310) 4 20 21 22 23 24 25 31 36 40 41 82 83 84 85 86 87 88 89 90 91
    DEL_LPAR (311) 4 24 25 40 41 52 98 99 106 109
    DEL_RPAR (312) 4 24 25 40 41 52 98 99 106 109
    DEL_COMMA (313) 13 29 30 39 112
    DEL_LBLOCK (314) 5 21 28 29 38 56 57 58 100 101 104 105
    DEL_RBLOCK (315) 5 21 28 29 38 56 57 58 100 101 104 105
    DEL_COLON (316) 4 20 21 22 23 24 25 27 28 29 30 31 36 40 41 98 99 100 101 104 105 106
    DEL_DOT (317) 53


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    program <crepr> (64)
        on left: 1
        on right: 0
    main_body <crepr> (65)
        on left: 2 3
        on right: 1
    main <crepr> (66)
        on left: 4
        on right: 2 3
    types <crepr> (67)
        on left: 5 6 7
        on right: 23 25 27 28 29 30 36 41 104 105
    basic_types <crepr> (68)
        on left: 8 9 10 11
        on right: 5 6 20 21
    identifiers <crepr> (69)
        on left: 12 13
        on right: 13 20 22 23 100 101
    decl_body <crepr> (70)
        on left: 14 15
        on right: 2 14
    declarations <crepr> (71)
        on left: 16 17 18 19
        on right: 14 15
    variable_declarations <crepr> (72)
        on left: 20 21
        on right: 16 94 95 114 118
    comp_variables <crepr> (73)
        on left: 22
        on right: 116 120
    constant_declarations <crepr> (74)
        on left: 23
        on right: 18 96 97 115 119
    functions <crepr> (75)
        on left: 24 25
        on right: 19
    parameter_declarations <crepr> (76)
        on left: 26 27 28 29 30
        on right: 24 25 29 30 40 41
    complex_type_declarations <crepr> (77)
        on left: 31
        on right: 17
    comp_body <crepr> (78)
        on left: 32 33 34 35
        on right: 31 33 35
    comp_variable_declarations <crepr> (79)
        on left: 36
        on right: 32 33
    comp_identifiers <crepr> (80)
        on left: 37 38 39
        on right: 36 39
    comp_functions <crepr> (81)
        on left: 40 41
        on right: 34 35
    expressions <crepr> (82)
        on left: 42 43 44 45 46 47 48 49 50 51 52
        on right: 23 49 50 51 52 53 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 98 99 100 101 104 105 106 108 111 112
    comp_expressions <crepr> (83)
        on left: 53
        on right: 59 91
    identifier_expressions <crepr> (84)
        on left: 54 55 56 57 58 59
        on right: 42 56 76 77 78 79 80 81
    arithmetic_expressions <crepr> (85)
        on left: 60 61 62 63 64 65 66 67 68 69
        on right: 47
    relational_expressions <crepr> (86)
        on left: 70 71 72 73 74 75
        on right: 48
    assign_expressions <crepr> (87)
        on left: 76 77 78 79 80 81
        on right: 88
    statements <crepr> (88)
        on left: 82 83 84 85 86 87 88 89 90 91
        on right: 92 93 113 117
    command_statements <crepr> (89)
        on left: 92 93 94 95 96 97
        on right: 93 94 96 98 99 100 101 106
    if_statement <crepr> (90)
        on left: 98 99
        on right: 82
    for_statement <crepr> (91)
        on left: 100 101
        on right: 83
    array_statement <crepr> (92)
        on left: 102 103
        on right: 84
    integral_array <crepr> (93)
        on left: 104
        on right: 102
    other_array <crepr> (94)
        on left: 105
        on right: 103
    while_statement <crepr> (95)
        on left: 106
        on right: 85
    return_statement <crepr> (96)
        on left: 107 108
        on right: 89
    function_statement <crepr> (97)
        on left: 109
        on right: 46 90
    function_arg <crepr> (98)
        on left: 110 111 112
        on right: 109 112
    body <crepr> (99)
        on left: 113 114 115 116 117 118 119 120
        on right: 4 24 25 40 41 117 118 119 120


State 0

    0 $accept: • program $end
    1 program: • main_body
    2 main_body: • decl_body main
    3          | • main
    4 main: • KW_DEF KW_MAIN DEL_LPAR DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   12 identifiers: • TK_IDENTIFIER
   13            | • identifiers DEL_COMMA TK_IDENTIFIER
   14 decl_body: • decl_body declarations
   15          | • declarations
   16 declarations: • variable_declarations
   17             | • complex_type_declarations
   18             | • constant_declarations
   19             | • functions
   20 variable_declarations: • identifiers DEL_COLON basic_types DEL_SMCOLON
   21                      | • TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK DEL_COLON basic_types DEL_SMCOLON
   23 constant_declarations: • KW_CONST identifiers AP_ASSIGN expressions DEL_COLON types DEL_SMCOLON
   24 functions: • KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   25          | • KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR AP_ARROWASSIGN types DEL_COLON body KW_ENDDEF DEL_SMCOLON
   31 complex_type_declarations: • KW_COMP TK_IDENTIFIER DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 1
    KW_CONST       shift, and go to state 2
    KW_DEF         shift, and go to state 3
    KW_COMP        shift, and go to state 4

    program                    go to state 5
    main_body                  go to state 6
    main                       go to state 7
    identifiers                go to state 8
    decl_body                  go to state 9
    declarations               go to state 10
    variable_declarations      go to state 11
    constant_declarations      go to state 12
    functions                  go to state 13
    complex_type_declarations  go to state 14


State 1

   12 identifiers: TK_IDENTIFIER •  [DEL_COMMA, DEL_COLON]
   21 variable_declarations: TK_IDENTIFIER • DEL_LBLOCK TK_INTEGER DEL_RBLOCK DEL_COLON basic_types DEL_SMCOLON

    DEL_LBLOCK  shift, and go to state 15

    $default  reduce using rule 12 (identifiers)


State 2

   12 identifiers: • TK_IDENTIFIER
   13            | • identifiers DEL_COMMA TK_IDENTIFIER
   23 constant_declarations: KW_CONST • identifiers AP_ASSIGN expressions DEL_COLON types DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 16

    identifiers  go to state 17


State 3

    4 main: KW_DEF • KW_MAIN DEL_LPAR DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   24 functions: KW_DEF • TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   25          | KW_DEF • TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR AP_ARROWASSIGN types DEL_COLON body KW_ENDDEF DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 18
    KW_MAIN        shift, and go to state 19


State 4

   31 complex_type_declarations: KW_COMP • TK_IDENTIFIER DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 20


State 5

    0 $accept: program • $end

    $end  shift, and go to state 21


State 6

    1 program: main_body •

    $default  reduce using rule 1 (program)


State 7

    3 main_body: main •

    $default  reduce using rule 3 (main_body)


State 8

   13 identifiers: identifiers • DEL_COMMA TK_IDENTIFIER
   20 variable_declarations: identifiers • DEL_COLON basic_types DEL_SMCOLON

    DEL_COMMA  shift, and go to state 22
    DEL_COLON  shift, and go to state 23


State 9

    2 main_body: decl_body • main
    4 main: • KW_DEF KW_MAIN DEL_LPAR DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   12 identifiers: • TK_IDENTIFIER
   13            | • identifiers DEL_COMMA TK_IDENTIFIER
   14 decl_body: decl_body • declarations
   16 declarations: • variable_declarations
   17             | • complex_type_declarations
   18             | • constant_declarations
   19             | • functions
   20 variable_declarations: • identifiers DEL_COLON basic_types DEL_SMCOLON
   21                      | • TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK DEL_COLON basic_types DEL_SMCOLON
   23 constant_declarations: • KW_CONST identifiers AP_ASSIGN expressions DEL_COLON types DEL_SMCOLON
   24 functions: • KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   25          | • KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR AP_ARROWASSIGN types DEL_COLON body KW_ENDDEF DEL_SMCOLON
   31 complex_type_declarations: • KW_COMP TK_IDENTIFIER DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON

    TK_IDENTIFIER  shift, and go to state 1
    KW_CONST       shift, and go to state 2
    KW_DEF         shift, and go to state 3
    KW_COMP        shift, and go to state 4

    main                       go to state 24
    identifiers                go to state 8
    declarations               go to state 25
    variable_declarations      go to state 11
    constant_declarations      go to state 12
    functions                  go to state 13
    complex_type_declarations  go to state 14


State 10

   15 decl_body: declarations •

    $default  reduce using rule 15 (decl_body)


State 11

   16 declarations: variable_declarations •

    $default  reduce using rule 16 (declarations)


State 12

   18 declarations: constant_declarations •

    $default  reduce using rule 18 (declarations)


State 13

   19 declarations: functions •

    $default  reduce using rule 19 (declarations)


State 14

   17 declarations: complex_type_declarations •

    $default  reduce using rule 17 (declarations)


State 15

   21 variable_declarations: TK_IDENTIFIER DEL_LBLOCK • TK_INTEGER DEL_RBLOCK DEL_COLON basic_types DEL_SMCOLON

    TK_INTEGER  shift, and go to state 26


State 16

   12 identifiers: TK_IDENTIFIER •

    $default  reduce using rule 12 (identifiers)


State 17

   13 identifiers: identifiers • DEL_COMMA TK_IDENTIFIER
   23 constant_declarations: KW_CONST identifiers • AP_ASSIGN expressions DEL_COLON types DEL_SMCOLON

    AP_ASSIGN  shift, and go to state 27
    DEL_COMMA  shift, and go to state 22


State 18

   24 functions: KW_DEF TK_IDENTIFIER • DEL_LPAR parameter_declarations DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   25          | KW_DEF TK_IDENTIFIER • DEL_LPAR parameter_declarations DEL_RPAR AP_ARROWASSIGN types DEL_COLON body KW_ENDDEF DEL_SMCOLON

    DEL_LPAR  shift, and go to state 28


State 19

    4 main: KW_DEF KW_MAIN • DEL_LPAR DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON

    DEL_LPAR  shift, and go to state 29


State 20

   31 complex_type_declarations: KW_COMP TK_IDENTIFIER • DEL_COLON comp_body KW_ENDCOMP DEL_SMCOLON

    DEL_COLON  shift, and go to state 30


State 21

    0 $accept: program $end •

    $default  accept


State 22

   13 identifiers: identifiers DEL_COMMA • TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 31


State 23

    8 basic_types: • KW_INT
    9            | • KW_BOOLEAN
   10            | • KW_SCALAR
   11            | • KW_STR
   20 variable_declarations: identifiers DEL_COLON • basic_types DEL_SMCOLON

    KW_INT      shift, and go to state 32
    KW_SCALAR   shift, and go to state 33
    KW_STR      shift, and go to state 34
    KW_BOOLEAN  shift, and go to state 35

    basic_types  go to state 36


State 24

    2 main_body: decl_body main •

    $default  reduce using rule 2 (main_body)


State 25

   14 decl_body: decl_body declarations •

    $default  reduce using rule 14 (decl_body)


State 26

   21 variable_declarations: TK_IDENTIFIER DEL_LBLOCK TK_INTEGER • DEL_RBLOCK DEL_COLON basic_types DEL_SMCOLON

    DEL_RBLOCK  shift, and go to state 37


State 27

   23 constant_declarations: KW_CONST identifiers AP_ASSIGN • expressions DEL_COLON types DEL_SMCOLON
   42 expressions: • identifier_expressions
   43            | • TK_STRING
   44            | • KW_TRUE
   45            | • KW_FALSE
   46            | • function_statement
   47            | • arithmetic_expressions
   48            | • relational_expressions
   49            | • KW_NOT expressions
   50            | • expressions KW_AND expressions
   51            | • expressions KW_OR expressions
   52            | • DEL_LPAR expressions DEL_RPAR
   53 comp_expressions: • expressions DEL_DOT expressions
   54 identifier_expressions: • TK_IDENTIFIER
   55                       | • AP_HASHASSIGN TK_IDENTIFIER
   56                       | • AP_HASHASSIGN TK_IDENTIFIER DEL_LBLOCK identifier_expressions DEL_RBLOCK
   57                       | • TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK
   58                       | • TK_IDENTIFIER DEL_LBLOCK TK_IDENTIFIER DEL_RBLOCK
   59                       | • comp_expressions
   60 arithmetic_expressions: • TK_INTEGER
   61                       | • TK_FLOAT
   62                       | • expressions OP_POWER expressions
   63                       | • expressions OP_MULT expressions
   64                       | • expressions OP_DIV expressions
   65                       | • expressions OP_MOD expressions
   66                       | • expressions OP_PLUS expressions
   67                       | • expressions OP_MINUS expressions
   68                       | • OP_PLUS expressions
   69                       | • OP_MINUS expressions
   70 relational_expressions: • expressions RP_LESS expressions
   71                       | • expressions RP_LESSEQUALS expressions
   72                       | • expressions RP_MORE expressions
   73                       | • expressions RP_MOREEQUALS expressions
   74                       | • expressions RP_EQUALS expressions
   75                       | • expressions RP_NOTEQUALS expressions
  109 function_statement: • TK_IDENTIFIER DEL_LPAR function_arg DEL_RPAR

    TK_IDENTIFIER  shift, and go to state 38
    TK_INTEGER     shift, and go to state 39
    TK_FLOAT       shift, and go to state 40
    TK_STRING      shift, and go to state 41
    KW_TRUE        shift, and go to state 42
    KW_FALSE       shift, and go to state 43
    KW_NOT         shift, and go to state 44
    OP_PLUS        shift, and go to state 45
    OP_MINUS       shift, and go to state 46
    AP_HASHASSIGN  shift, and go to state 47
    DEL_LPAR       shift, and go to state 48

    expressions             go to state 49
    comp_expressions        go to state 50
    identifier_expressions  go to state 51
    arithmetic_expressions  go to state 52
    relational_expressions  go to state 53
    function_statement      go to state 54


State 28

   24 functions: KW_DEF TK_IDENTIFIER DEL_LPAR • parameter_declarations DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   25          | KW_DEF TK_IDENTIFIER DEL_LPAR • parameter_declarations DEL_RPAR AP_ARROWASSIGN types DEL_COLON body KW_ENDDEF DEL_SMCOLON
   26 parameter_declarations: ε •  [DEL_RPAR]
   27                       | • TK_IDENTIFIER DEL_COLON types
   28                       | • TK_IDENTIFIER DEL_LBLOCK DEL_RBLOCK DEL_COLON types
   29                       | • TK_IDENTIFIER DEL_LBLOCK DEL_RBLOCK DEL_COLON types DEL_COMMA parameter_declarations
   30                       | • TK_IDENTIFIER DEL_COLON types DEL_COMMA parameter_declarations

    TK_IDENTIFIER  shift, and go to state 55

    $default  reduce using rule 26 (parameter_declarations)

    parameter_declarations  go to state 56


State 29

    4 main: KW_DEF KW_MAIN DEL_LPAR • DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON

    DEL_RPAR  shift, and go to state 57


State 30

   31 complex_type_declarations: KW_COMP TK_IDENTIFIER DEL_COLON • comp_body KW_ENDCOMP DEL_SMCOLON
   32 comp_body: • comp_variable_declarations
   33          | • comp_variable_declarations comp_body
   34          | • comp_functions
   35          | • comp_functions comp_body
   36 comp_variable_declarations: • comp_identifiers DEL_COLON types DEL_SMCOLON
   37 comp_identifiers: • AP_HASHASSIGN TK_IDENTIFIER
   38                 | • AP_HASHASSIGN TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK
   39                 | • AP_HASHASSIGN TK_IDENTIFIER DEL_COMMA comp_identifiers
   40 comp_functions: • KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR DEL_COLON body KW_ENDDEF DEL_SMCOLON
   41               | • KW_DEF TK_IDENTIFIER DEL_LPAR parameter_declarations DEL_RPAR AP_ARROWASSIGN types DEL_COLON body KW_ENDDEF DEL_SMCOLON

    KW_DEF         shift, and go to state 58
    AP_HASHASSIGN  shift, and go to state 59

    comp_body                   go to state 60
    comp_variable_declarations  go to state 61
    comp_identifiers            go to state 62
    comp_functions              go to state 63


State 31

   13 identifiers: identifiers DEL_COMMA TK_IDENTIFIER •

    $default  reduce using rule 13 (identifiers)


State 32

    8 basic_types: KW_INT •

    $default  reduce using rule 8 (basic_types)


State 33

   10 basic_types: KW_SCALAR •

    $default  reduce using rule 10 (basic_types)


State 34

   11 basic_types: KW_STR •

    $default  reduce using rule 11 (basic_types)


State 35

    9 basic_types: KW_BOOLEAN •

    $default  reduce using rule 9 (basic_types)


State 36

   20 variable_declarations: identifiers DEL_COLON basic_types • DEL_SMCOLON

    DEL_SMCOLON  shift, and go to state 64


State 37

   21 variable_declarations: TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK • DEL_COLON basic_types DEL_SMCOLON

    DEL_COLON  shift, and go to state 65


State 38

   54 identifier_expressions: TK_IDENTIFIER •  [KW_FOR, KW_AND, KW_OR, OP_PLUS, OP_MINUS, OP_MULT, OP_DIV, OP_MOD, OP_POWER, RP_EQUALS, RP_NOTEQUALS, RP_LESS, RP_LESSEQUALS, RP_MORE, RP_MOREEQUALS, AP_ASSIGN, AP_PLUSASSIGN, AP_MINASSIGN, AP_MULASSIGN, AP_DIVASSIGN, AP_MODASSIGN, DEL_SMCOLON, DEL_RPAR, DEL_COMMA, DEL_RBLOCK, DEL_COLON, DEL_DOT]
   57                       | TK_IDENTIFIER • DEL_LBLOCK TK_INTEGER DEL_RBLOCK
   58                       | TK_IDENTIFIER • DEL_LBLOCK TK_IDENTIFIER DEL_RBLOCK
  109 function_statement: TK_IDENTIFIER • DEL_LPAR function_arg DEL_RPAR

    DEL_LPAR    shift, and go to state 66
    DEL_LBLOCK  shift, and go to state 67

    $default  reduce using rule 54 (identifier_expressions)


State 39

   60 arithmetic_expressions: TK_INTEGER •

    $default  reduce using rule 60 (arithmetic_expressions)


State 40

   61 arithmetic_expressions: TK_FLOAT •

    $default  reduce using rule 61 (arithmetic_expressions)


State 41

   43 expressions: TK_STRING •

    $default  reduce using rule 43 (expressions)


State 42

   44 expressions: KW_TRUE •

    $default  reduce using rule 44 (expressions)


State 43

   45 expressions: KW_FALSE •

    $default  reduce using rule 45 (expressions)


State 44

   42 expressions: • identifier_expressions
   43            | • TK_STRING
   44            | • KW_TRUE
   45            | • KW_FALSE
   46            | • function_statement
   47            | • arithmetic_expressions
   48            | • relational_expressions
   49            | • KW_NOT expressions
   49            | KW_NOT • expressions
   50            | • expressions KW_AND expressions
   51            | • expressions KW_OR expressions
   52            | • DEL_LPAR expressions DEL_RPAR
   53 comp_expressions: • expressions DEL_DOT expressions
   54 identifier_expressions: • TK_IDENTIFIER
   55                       | • AP_HASHASSIGN TK_IDENTIFIER
   56                       | • AP_HASHASSIGN TK_IDENTIFIER DEL_LBLOCK identifier_expressions DEL_RBLOCK
   57                       | • TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK
   58                       | • TK_IDENTIFIER DEL_LBLOCK TK_IDENTIFIER DEL_RBLOCK
   59                       | • comp_expressions
   60 arithmetic_expressions: • TK_INTEGER
   61                       | • TK_FLOAT
   62                       | • expressions OP_POWER expressions
   63                       | • expressions OP_MULT expressions
   64                       | • expressions OP_DIV expressions
   65                       | • expressions OP_MOD expressions
   66                       | • expressions OP_PLUS expressions
   67                       | • expressions OP_MINUS expressions
   68                       | • OP_PLUS expressions
   69                       | • OP_MINUS expressions
   70 relational_expressions: • expressions RP_LESS expressions
   71                       | • expressions RP_LESSEQUALS expressions
   72                       | • expressions RP_MORE expressions
   73                       | • expressions RP_MOREEQUALS expressions
   74                       | • expressions RP_EQUALS expressions
   75                       | • expressions RP_NOTEQUALS expressions
  109 function_statement: • TK_IDENTIFIER DEL_LPAR function_arg DEL_RPAR

    TK_IDENTIFIER  shift, and go to state 38
    TK_INTEGER     shift, and go to state 39
    TK_FLOAT       shift, and go to state 40
    TK_STRING      shift, and go to state 41
    KW_TRUE        shift, and go to state 42
    KW_FALSE       shift, and go to state 43
    KW_NOT         shift, and go to state 44
    OP_PLUS        shift, and go to state 45
    OP_MINUS       shift, and go to state 46
    AP_HASHASSIGN  shift, and go to state 47
    DEL_LPAR       shift, and go to state 48

    expressions             go to state 68
    comp_expressions        go to state 50
    identifier_expressions  go to state 51
    arithmetic_expressions  go to state 52
    relational_expressions  go to state 53
    function_statement      go to state 54


State 45

   42 expressions: • identifier_expressions
   43            | • TK_STRING
   44            | • KW_TRUE
   45            | • KW_FALSE
   46            | • function_statement
   47            | • arithmetic_expressions
   48            | • relational_expressions
   49            | • KW_NOT expressions
   50            | • expressions KW_AND expressions
   51            | • expressions KW_OR expressions
   52            | • DEL_LPAR expressions DEL_RPAR
   53 comp_expressions: • expressions DEL_DOT expressions
   54 identifier_expressions: • TK_IDENTIFIER
   55                       | • AP_HASHASSIGN TK_IDENTIFIER
   56                       | • AP_HASHASSIGN TK_IDENTIFIER DEL_LBLOCK identifier_expressions DEL_RBLOCK
   57                       | • TK_IDENTIFIER DEL_LBLOCK TK_INTEGER DEL_RBLOCK
   58                       | • TK_IDENTIFIER DEL_LBLOCK TK_IDENTIFIER DEL_RBLOCK
   59                       | • comp_expressions
   60 arithmetic_expressions: • TK_INTEGER
   61                       | • TK_FLOAT
   62                       | • expressions OP_POWER expressions
   63                       | • expressions OP_MULT expressions
   64                       | • expressions OP_DIV expressions
   65                       | • expressions OP_MOD expressions
   66                       | • expressions OP_PLUS expressions
   67                       | • expressions OP_MINUS expressions
   68                       | • OP_PLUS expressions
   68                       | OP_PLUS • expressions
   69                       | • OP_MINUS expressions
   70 relational_expressions: • expressions RP_LESS expressions
   71                       | • expressions RP_LESSEQUALS expressions
   72                       | • expressions RP_MORE expressions
   73                       | • expressions RP_MOREEQUALS expressions
   74                       | • expressions RP_EQUALS expressions
   75                       | • expressions RP_NOTEQUALS expressions
  109 function_statement: • TK_IDENTIFIER DEL_LPAR function_arg DEL_RPAR

    TK_IDENTIFIER  shift, and go to state 38
    TK_INTEGER     shift, and go to state 39
    TK_FLOAT       shift, and go to state 40
    TK_STRING      shift, and go to state 41
    KW_TRUE        shift, and go to state 42
    KW_FALSE       shift, and go to state 43
    KW_NOT         shift, and go to state 44
    OP_PLUS        shift, and go to state 45
    OP_MINUS       shift, and go to state 46
    AP_HASHASSIGN  shift, and go to state 47
    DEL_LPAR       shift, and go to state 48
